--- a/spark-master/Dockerfile
+++ b/spark-master/Dockerfile
@@ -1,5 +1,5 @@
-FROM earthquakesan/hadoop-spark:1.0.0
-MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
+FROM sos3k/hadoop-spark
+MAINTAINER Radoslaw Wojciechowski <radoslaw.wojciechowski@gmail.com>
 
 ADD spark-master-entrypoint.sh /spark-master-entrypoint.sh
 RUN chmod a+x /spark-master-entrypoint.sh
